Restauración de proyecto
Cambié el diseño de todo (prácticamente). Si quiere ya puede ir conectando las páginas, ya conecte algunas. Falta el volver en el filtro de búsqueda. Agregué también la página admin.

--- a/proyectoHotelGabarra/contenido/sesionIniciada.html
+++ b/proyectoHotelGabarra/contenido/sesionIniciada.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel la Gabarra</title>
-    <link rel="stylesheet" href="../styles/inicio.css">
+    <link rel="stylesheet" href="../styles/sesionIniciada.css">
 </head>
 
 <body>
@@ -15,9 +15,11 @@
         <div class="navlinks">
             <ul id="menulist">
                 <li class="image-square"></li>
-                <li><a href="registroSesion.html" class="loginBtn-text">ACCEDER O CREAR CUENTA</a></li>
+                <li> <a href="#usuario">"Traer el nombre delusuario"</a> </li>
                 <li><a href="filtroBusqueda.html">Reservas</a></li>
+                <li> <a href="#pagos">Pagos</a> </li>
                 <li><a href="#soporte">Soporte</a></li>
+                <li> <a href="index.html">Salir</a> </li>
             </ul>
             <div class="slider-container">
                 <div class="slider position"></div>
