--- a/proyectoHotelGabarra/contenido/iniAdmin.html
+++ b/proyectoHotelGabarra/contenido/iniAdmin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel la Gabarra</title>
-    <link rel="stylesheet" href="../styles/inicio.css">
+    <link rel="stylesheet" href="../styles/Admin.css">
 </head>
 
 <body>
@@ -15,9 +15,14 @@
         <div class="navlinks">
             <ul id="menulist">
                 <li class="image-square"></li>
-                <li><a href="registroSesion.html" class="loginBtn-text">ACCEDER O CREAR CUENTA</a></li>
+                <li> <a href="#usuario">"Traer el nombre del Admin"</a> </li>
                 <li><a href="filtroBusqueda.html">Reservas</a></li>
+                <li> <a href="#pagos">Pagos</a> </li>
+                <li><a href="#soporte">Ver reservas</a></li>
+                <li><a href="#soporte">Habitaciones</a></li>
+                <li><a href="#soporte">Sevicios adicionales</a></li>
                 <li><a href="#soporte">Soporte</a></li>
+                <li> <a href="index.html">Salir</a> </li>
             </ul>
             <div class="slider-container">
                 <div class="slider position"></div>
