arreglando la imagenes
Arreglando las pantalla inicio y la pantalla inicio sesion con las imagenes al 10% de la pagina

--- a/proyectoHotelGabarra/contenido/index.html
+++ b/proyectoHotelGabarra/contenido/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel la Gabarra</title>
     <link rel="stylesheet" href="../styles/inicio.css">
 </head>
-
 <body>
-
 <header>
     <div class="content flex_space">
         <div class="navlinks">
@@ -19,13 +16,19 @@
                 <li><a href="filtroBusqueda.html">Reservas</a></li>
                 <li><a href="#soporte">Soporte</a></li>
             </ul>
-            <div class="slider-container">
-                <div class="slider position"></div>
-            </div>
             <span class="fa fa-bars" onclick="menutoggle()"></span>
         </div>
     </div>
 </header>
+
+<div class="slider-container">
+    <div class="slider position">
+        <div class="slider-text">
+            <h1>Bienvenido a Hotel la Gabarra</h1>
+            <p>Disfruta de una estancia inolvidable</p>
+        </div>
+    </div>
+</div>
 
 <script>
     var menulist = document.getElementById('menulist');
@@ -41,3 +44,5 @@
 </script>
 </body>
 </html>
+
+
