Hice y agregué cambios de ventanas.
Cambié el filtro de búsqueda.
Agregué ventanas de pagos, ver reservas, habitaciones, soporte para el ADMIN, falta acomodar esas ventanas o las que se necesiten para los clientes.
También redireccioné la gran mayoría de ellas.
Las ventanas que agregué ya tienen para agregar las tablas de la BD.

--- a/proyectoHotelGabarra/contenido/iniAdmin.html
+++ b/proyectoHotelGabarra/contenido/iniAdmin.html
@@ -15,14 +15,13 @@
         <div class="navlinks">
             <ul id="menulist">
                 <li class="image-square"></li>
-                <li> <a href="#usuario">"Traer el nombre del Admin"</a> </li>
+                <li> <a href="#usuario">ADMIN</a> </li>
                 <li><a href="filtroBusqueda.html">Reservas</a></li>
-                <li> <a href="#pagos">Pagos</a> </li>
-                <li><a href="#soporte">Ver reservas</a></li>
-                <li><a href="#soporte">Habitaciones</a></li>
-                <li><a href="#soporte">Sevicios adicionales</a></li>
-                <li><a href="#soporte">Soporte</a></li>
-                <li> <a href="index.html">Salir</a> </li>
+                <li> <a href="pagos.html">Pagos</a> </li>
+                <li><a href="verReservas.html">Ver reservas</a></li>
+                <li><a href="habitaciones.html">Habitaciones</a></li>
+                <li><a href="soporte.html">Soporte</a></li>
+                <li><button class="volverBtn" onclick="window.location.href='index.html';">SALIR</button></li>
             </ul>
             <div class="slider-container">
                 <div class="slider position"></div>
