--- a/proyectoHotelGabarra/contenido/index.html
+++ b/proyectoHotelGabarra/contenido/index.html
@@ -14,7 +14,7 @@
                 <li class="image-square"></li>
                 <li><a href="registroSesion.html" class="loginBtn-text">ACCEDER O CREAR CUENTA</a></li>
                 <li><a href="filtroBusqueda.html">Reservas</a></li>
-                <li><a href="#soporte">Soporte</a></li>
+                <li><a href="soporte.html">Soporte</a></li>
             </ul>
             <span class="fa fa-bars" onclick="menutoggle()"></span>
         </div>
@@ -24,8 +24,10 @@
 <div class="slider-container">
     <div class="slider position">
         <div class="slider-text">
-            <h1>Bienvenido a Hotel la Gabarra</h1>
-            <p>Disfruta de una estancia inolvidable</p>
+            <h1>¡BIENVENIDO!</h1>
+                <h1>HOTEL GABARRA</h1>
+                <h1>★ ★ ★ ★ ★</h1>
+                <p>DISFRUTA DE UNA ESTANCIA INOLVIDABLE</p>
         </div>
     </div>
 </div>
