--- a/proyectoHotelGabarra/contenido/pagos.html
+++ b/proyectoHotelGabarra/contenido/pagos.html
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="header-left">
             <img src="../images/Persona.jpg" alt="Verificado" class="verified-icon">
-            <span class="username">ADMIN</span>
+            <span class="username">(nombre de usuario o ADMIN)</span>
         </div>
         <div class="header-center">
             <h1>HOTEL GABARRA</h1>
