--- a/proyectoHotelGabarra/contenido/registroSesion.html
+++ b/proyectoHotelGabarra/contenido/registroSesion.html
@@ -18,7 +18,7 @@
             <h2>INGRERSAR</h2>
             <div class="input-group">
                 <input type="text" required>
-                <label for="">Correo</label>
+                <label for="">Número telefónico</label>
             </div>
             <div class="input-group">
                 <input type="password" required>
@@ -31,6 +31,7 @@
             <div class="signUp-link">
                 <p>¿No tienes cuenta? <a href="#" class="signUpBtn-link">Regístrate.</a></p>
             </div>
+            <button onclick="window.location.href='index.html';">VOLVER</button>
         </form>
     </div>
 
@@ -40,7 +41,11 @@
             <h2>CREAR CUENTA</h2>
             <div class="input-group">
                 <input type="text" required>
-                <label for="">Primer nombre y primer apellido</label>
+                <label for="">Primer nombre y apellido</label>
+            </div>
+            <div class="input-group">
+                <input type="text" required>
+                <label for="">Cédula</label>
             </div>
             <div class="input-group">
                 <input type="text" required>
@@ -57,9 +62,6 @@
             <div class="input-group">
                 <input type="password" required>
                 <label for="">Confirmar contraseña</label>
-            </div>
-            <div class="remember">
-                <label><input type="checkbox"> Acepto los términos y condiciones.</label>
             </div>
             <button type="submit">CONFIRMAR</button>
             <div class="signUp-link">
