--- a/proyectoHotelGabarra/contenido/filtroBusqueda.html
+++ b/proyectoHotelGabarra/contenido/filtroBusqueda.html
@@ -12,8 +12,8 @@
 <body>
     <div class="header">
         <div class="header-left">
-            <img src="/proyectoHotelGabarra/images/Persona.jpg" alt="Verificado" class="verified-icon">
-            <span class="username">(nombre de usuario)</span>
+            <img src="../images/Persona.jpg" alt="Verificado" class="verified-icon">
+            <span class="username">(nombre de usuario o ADMIN)</span>
         </div>
         <div class="header-center">
             <h1>HOTEL GABARRA</h1>
@@ -53,7 +53,7 @@
 
         <div class="rooms">
             <div class="room-card">
-                <img src="/proyectoHotelGabarra/images/sencilla1.jpg" alt="Estandar Matrimonial">
+                <img src="../images/Matrimonial1.jpeg" alt="Estandar Matrimonial">
                 <div class="room-info">
                     <h3>Estandar Matrimonial</h3>
                     <p>Max 2 personas • NO SE PERMITE FUMAR</p>
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="room-card">
-                <img src="sencilla.jpg" alt="Estandar Sencilla">
+                <img src="../images/sencilla2.jpg" alt="Estandar Sencilla">
                 <div class="room-info">
                     <h3>Estandar Sencilla</h3>
                     <p>Max 2 personas • NO SE PERMITE FUMAR</p>
@@ -71,20 +71,11 @@
                 </div>
             </div>
             <div class="room-card">
-                <img src="doble.jpg" alt="Estandar Doble">
+                <img src="../images/Doble1.jpeg" alt="Estandar Doble">
                 <div class="room-info">
                     <h3>Estandar Doble</h3>
                     <p>Max 2 personas • NO SE PERMITE FUMAR</p>
                     <p>Desde 400.000 COP/ Noche</p>
-                    <button class="addReservaBtn">AÑADIR A RESERVA</button>
-                </div>
-            </div>
-            <div class="room-card">
-                <img src="sencilla.jpg" alt="Estandar Sencilla">
-                <div class="room-info">
-                    <h3>Estandar Sencilla</h3>
-                    <p>Max 2 personas • NO SE PERMITE FUMAR</p>
-                    <p>Desde 350.000 COP/ Noche</p>
                     <button class="addReservaBtn">AÑADIR A RESERVA</button>
                 </div>
             </div>
@@ -95,10 +86,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
