arreglo habitaciones y diseño
aun no funciona login y registro error en el metodo post no se que hacer ya con ese metodo

--- a/registroSesion.html
+++ b/registroSesion.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
+    
 </head>
 
 <body>
@@ -15,11 +16,11 @@
             <form action="/login" method="POST">
                 <h2>INGRESAR</h2>
                 <div class="input-group">
-                    <input type="text" name="numeroCelular" required>
+                    <input type="text" id="numeroCelular" name="numeroCelular" required>
                     <label for="">Número telefónico</label>
                 </div>
                 <div class="input-group">
-                    <input type="password" name="Contrasena" required>
+                    <input type="password" id="Contrasena" name="Contrasena" required>
                     <label for="">Contraseña</label>
                 </div>
                 <div class="remember">
