--- a/sesionIniciada.html
+++ b/sesionIniciada.html
@@ -14,7 +14,7 @@
             <div class="navlinks">
                 <ul id="menulist">
                     <li class="image-square"></li>
-                    <li> <a href="#usuario">(nombre de usuario)</a> </li>
+                    <li><a href="/sesionIniciada.html?Usuario=${nombreCompleto}">${nombre de usuario}</a></li>
                     <li><a href="filtroBusqueda.html">Reservas</a></li>
                     <li> <a href="pagos.html">Pagos</a> </li>
                     <li><a href="soporte.html">Soporte</a></li>
