arreglo login y registrer
funcionando en el puerto 3000 en el 5500 no me esta dando resultados

--- a/registroSesion.html
+++ b/registroSesion.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
-    
 </head>
 
 <body>
@@ -16,12 +15,12 @@
             <form action="/login" method="POST">
                 <h2>INGRESAR</h2>
                 <div class="input-group">
-                    <input type="text" id="numeroCelular" name="numeroCelular" required>
-                    <label for="">Número telefónico</label>
+                    <input type="email" id="correo" name="correo" required>
+                    <label for="correo">Correo Electrónico</label>
                 </div>
                 <div class="input-group">
-                    <input type="password" id="Contrasena" name="Contrasena" required>
-                    <label for="">Contraseña</label>
+                    <input type="password" id="contrasena" name="contrasena" required>
+                    <label for="contrasena">Contraseña</label>
                 </div>
                 <div class="remember">
                     <label><input type="checkbox"> Recordar</label>
@@ -40,27 +39,27 @@
                 <h2>CREAR CUENTA</h2>
                 <div class="input-group">
                     <input type="text" name="nombreCompleto" required>
-                    <label for="">Primer nombre y apellido</label>
+                    <label for="nombreCompleto">Primer nombre y apellido</label>
                 </div>
                 <div class="input-group">
                     <input type="text" name="numeroCedula" required>
-                    <label for="">Cédula</label>
+                    <label for="numeroCedula">Cédula</label>
                 </div>
                 <div class="input-group">
                     <input type="text" name="numeroCelular" required>
-                    <label for="">Número telefónico</label>
+                    <label for="numeroCelular">Número telefónico</label>
                 </div>
                 <div class="input-group">
                     <input type="email" name="Correo" required>
-                    <label for="">Correo</label>
+                    <label for="Correo">Correo</label>
                 </div>
                 <div class="input-group">
                     <input type="password" name="Contrasena" required>
-                    <label for="">Contraseña</label>
+                    <label for="Contrasena">Contraseña</label>
                 </div>
                 <div class="input-group">
                     <input type="password" name="confirmContrasena" required>
-                    <label for="">Confirmar contraseña</label>
+                    <label for="confirmContrasena">Confirmar contraseña</label>
                 </div>
                 <button type="submit">CONFIRMAR</button>
                 <div class="signUp-link">
