traer datos de la bd al html
funciona el nombre en sesioniniciada pagos soprte filtro de busqueda acomodar stylos del nombre

--- a/public/filtroBusqueda.html
+++ b/public/filtroBusqueda.html
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="header-left">
             <img src="images/Persona.jpg" alt="Verificado" class="verified-icon">
-            <span class="username">(nombre de usuario o ADMIN)</span>
+            <li class="nombreUsuario" id="nombreUsuario"></li>
         </div>
         <div class="header-center">
             <h1>HOTEL GABARRA</h1>
@@ -82,7 +82,11 @@
         </div>
     </div>
 
-    <script src="js/filtroBusqueda.js"></script>
+    <script src="js/filtroBusqueda.js">
+
+
+    </script>
+    
 </body>
 
 </html>
