--- a/public/pagos.html
+++ b/public/pagos.html
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="header-left">
             <img src="images/Persona.jpg" alt="Verificado" class="verified-icon">
-            <span class="username">(nombre de usuario o ADMIN)</span>
+            <li class="nombreUsuario" id="nombreUsuario"></li>
         </div>
         <div class="header-center">
             <h1>HOTEL GABARRA</h1>
@@ -38,12 +38,34 @@
             </tr>
         </thead>
         <tbody id="habitacionesBody">
-            <!-- Aquí se llenará dinámicamente con JavaScript -->
         </tbody>
     </table>
 
-    <!-- Se vincula el archivo JavaScript -->
-    <script src="js/pagos.js"></script>   <!-- este js no existe tener en cuenta -->
+    <script>
+   fetch('http://127.0.0.1:3000/user-data')
+    .then(response => {
+        if (!response.ok) {
+            throw new Error('Network response was not ok');
+        }
+        return response.json();
+    })
+    .then(data => {
+        if (data.nombreCompleto) {
+            document.getElementById('nombreUsuario').textContent = data.nombreCompleto;
+        } else {
+            document.getElementById('nombreUsuario').textContent = 'Invitado';
+        }
+
+        var nombreCompleto = data.nombreCompleto;
+        document.getElementById("nombreUsuario").textContent = nombreCompleto;
+        console.log('Nombre completo del usuario:', nombreCompleto);
+    })
+    .catch(error => {
+        console.error('Error al obtener datos del usuario:', error);
+        document.getElementById('nombreUsuario').textContent = 'Invitado';
+    });
+
+    </script>  
 </body>
 
 </html>
