--- a/public/sesionIniciada.html
+++ b/public/sesionIniciada.html
@@ -14,11 +14,11 @@
             <div class="navlinks">
                 <ul id="menulist">
                     <li class="image-square"></li>
-                    <p>Bienvenido, <span id="nombreUsuario"></span>!</p>
+                    <li class="nombreUsuario" id="nombreUsuario"></li>
                     <li><a href="filtroBusqueda.html">Reservas</a></li>
-                    <li> <a href="pagos.html">Pagos</a> </li>
+                    <li><a href="pagos.html">Pagos</a></li>
                     <li><a href="soporte.html">Soporte</a></li>
-                    <li><button class="volverBtn" onclick="window.location.href='http://127.0.0.1:5500/index.html';">SALIR</button></li>
+                    <li><button class="volverBtn" onclick="logout()">SALIR</button></li>
                 </ul>
                 <span class="fa fa-bars" onclick="menutoggle()"></span>
             </div>
@@ -37,6 +37,24 @@
     </div>
 
     <script>
+         function logout() {
+        fetch('/logout', {
+            method: 'POST',
+            credentials: 'same-origin' 
+        })
+        .then(response => {
+            if (response.ok) {
+                window.location.href = 'registroSesion.html';
+            } else {
+                console.error('Error al cerrar la sesión');
+            }
+        })
+        
+        .catch(error => {
+            console.error('Error al cerrar la sesión:', error);
+        });
+    }
+
         var menulist = document.getElementById('menulist');
         menulist.style.maxHeight = "0px";
 
@@ -48,15 +66,30 @@
             }
         }
 
+        fetch('http://127.0.0.1:3000/user-data')
+    .then(response => {
+        if (!response.ok) {
+            throw new Error('Network response was not ok');
+        }
+        return response.json();
+    })
+    .then(data => {
+        if (data.nombreCompleto) {
+            document.getElementById('nombreUsuario').textContent = data.nombreCompleto;
+        } else {
+            document.getElementById('nombreUsuario').textContent = 'Invitado';
+        }
 
-        document.addEventListener('DOMContentLoaded', () => {
-    const params = new URLSearchParams(window.location.search);
-    const nombreDeUsuario = params.get('Usuario');
-    const nombreUsuarioElement = document.getElementById('nombreUsuario');
-    if (nombreUsuarioElement && nombreDeUsuario) {
-        nombreUsuarioElement.textContent = nombreDeUsuario;
-    }
-});
+        var nombreCompleto = data.nombreCompleto;
+        document.getElementById("nombreUsuario").textContent = nombreCompleto;
+        console.log('Nombre completo del usuario:', nombreCompleto);
+    })
+    .catch(error => {
+        console.error('Error al obtener datos del usuario:', error);
+        document.getElementById('nombreUsuario').textContent = 'Invitado';
+    });
+
+
 
     </script>
 </body>
