--- a/public/verReservas.html
+++ b/public/verReservas.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservas</title>
-    <link rel="stylesheet" type="text/css" href="styles/verReservas.css">
-    
+    <link rel="stylesheet" href="styles/verReservas.css">
 </head>
 <body>
     <div class="header">
@@ -39,11 +37,10 @@
             </tr>
         </thead>
         <tbody id="reservasBody">
-            <!-- Las habitaciones se añadirán aquí dinámicamente -->
+            <!-- Las reservas se añadirán aquí dinámicamente -->
         </tbody>
     </table>
 
     <script src="js/verReservas.js"></script>
-    
 </body>
 </html>
