--- a/public/filtroBusqueda.html
+++ b/public/filtroBusqueda.html
@@ -11,7 +11,7 @@
     <div class="header">
         <div class="header-left">
             <img src="images/Persona.jpg" alt="Verificado" class="verified-icon">
-            <li class="nombreUsuario" id="nombreUsuario"></li>
+            <li class="nombreUsuario" id="nombreUsuario" data-user-id=""></li> <!-- Cambio agregado aquí -->
         </div>
         <div class="header-center">
             <h1>HOTEL GABARRA</h1>
@@ -46,6 +46,7 @@
             <hr class="divider">
             <h2 style="text-align: center;">RESUMEN</h2>
             <div id="resumen"></div>
+            <div id="totalPrecio" class="resumen-item"></div> <!-- Contenedor para el total de la reserva -->
             <button id="pagarReserva" style="display: none;">PAGAR RESERVA</button>
         </div>
 
@@ -54,8 +55,25 @@
         </div>
     </div>
 
-    <script src="js/filtroBusqueda.js"> </script>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <img src="../public/images/carrito.jpeg" alt="Campana" class="modal-image">
+            <div class="modal-body">
+                <p id="modal-date"></p>
+                <p id="modal-total"></p>
+                <button id="confirmarPagoBtn">CONFIRMAR PAGO (BANCO)</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/filtroBusqueda.js"></script>
 </body>
 </html>
+
+
+
+
+
 
 
