--- a/public/pagos.html
+++ b/public/pagos.html
@@ -28,13 +28,12 @@
 
     <h2 id="habitacionesTitle" style="text-align: center; margin-top: 20px;">DETALLES DE PAGOS</h2>
 
-    <!-- Aquí se agrega la tabla -->
     <table id="pagosTable" style="margin: 0 auto;">
         <thead>
             <tr>
                 <th>ID Pago</th>
                 <th>ID Reserva</th>
-                <th>Monto</th>
+                <th>Valor Pago</th>
                 <th>Fecha de Pago</th>
                 <th>Estado</th>
             </tr>
@@ -44,6 +43,7 @@
     </table>
 
     <script>
+        // Obtener datos del usuario
         fetch('http://127.0.0.1:3000/user-data')
             .then(response => {
                 if (!response.ok) {
@@ -63,6 +63,7 @@
                 document.getElementById('nombreUsuario').textContent = 'Invitado';
             });
 
+        // Obtener datos de pagos
         fetch('http://127.0.0.1:3000/pagos')
             .then(response => {
                 if (!response.ok) {
@@ -71,21 +72,23 @@
                 return response.json();
             })
             .then(pagos => {
+                console.log(pagos);  // Agrega esto para verificar los datos recibidos
                 const pagosBody = document.getElementById('pagosBody');
                 pagos.forEach(pago => {
                     const row = document.createElement('tr');
                     row.innerHTML = `
-                        <td>${pago.idPago}</td>
-                        <td>${pago.idReserva}</td>
-                        <td>${pago.monto}</td>
-                        <td>${pago.fechaPago}</td>
-                        <td>${pago.estado}</td>
-                    `;
+                <td>${pago.idPago}</td>
+                <td>${pago.idReserva}</td>
+                <td>${pago.valorPago}</td>
+                <td>${new Date(pago.fechaPago).toLocaleDateString()}</td>
+                <td>${pago.estado}</td>
+            `;
                     pagosBody.appendChild(row);
                 });
             })
-            .catch(error => console.error('Error fetching pagos:', error));
-    </script>  
+            .catch(error => console.error('Error al obtener pagos:', error));
+
+    </script>
 </body>
 
 </html>
