Arreglos de color
Cambios de color secundarios.

--- a/public/soporte.html
+++ b/public/soporte.html
@@ -34,8 +34,8 @@
         
         <h2>Contacto</h2>
         <div class="contact-info">
-            <p><strong>Número de contacto:</strong> +57 123 456 7890</p>
-            <p><strong>Email:</strong> contacto@hotelxyz.com</p>
+            <p><strong>Número de contacto:</strong> +57 3138692075</p>
+            <p><strong>Email:</strong> hotelGabarra@gmail.com</p>
         </div>
 
         <h2 class="social-media-heading">Redes Sociales</h2>
