--- a/public/verReservas.html
+++ b/public/verReservas.html
@@ -30,10 +30,9 @@
             <tr>
                 <th>ID</th>
                 <th>Usuario</th>
-                <th>Habitaciones</th>
+                <th>Número de Habitaciones</th>
                 <th>Fecha inicial</th>
                 <th>Fecha final</th>
-                <th>Estado de pago</th>
             </tr>
         </thead>
         <tbody id="reservasBody">
