--- a/public/sesionIniciada.html
+++ b/public/sesionIniciada.html
@@ -16,7 +16,7 @@
                     <li class="image-square"></li>
                     <li class="nombreUsuario" id="nombreUsuario"></li>
                     <li><a href="filtroBusqueda.html">Reservas</a></li>
-                    <li><a href="pagos.html">Pagos</a></li>
+                    <li><a href="detallesPagos.html">Detalles de reservas</a></li>
                     <li><a href="soporte.html">Soporte</a></li>
                     <li><button class="volverBtn" onclick="logout()">SALIR</button></li>
                 </ul>
